@@ -1,3 +1,7 @@
+Wed Sep 18 18:26 2013 CDT
+    * lib/user.js: Change channel checks to include checking for whether
+      the channel is dead
+
 Wed Sep 18 18:14 2013 CDT
     * lib/channel.js: Add a bunch of checks to prevent callbacks from doing
       things with a dead channel
